--- a/milestone1/competition.html
+++ b/milestone1/competition.html
@@ -13,42 +13,39 @@
         <h1>Rookie Coding</h1>
     </header>
     <nav>
-        <a href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/index.html">Home</a>  &nbsp;
-        <a href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/audience.html">Audience</a> &nbsp;
-        <a href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/competition.html">Competition</a>
+        <a
+            href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/index.html">Home</a>
+        &nbsp;
+        <a
+            href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/audience.html">Audience</a>
+        &nbsp;
+        <a
+            href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/competition.html">Competition</a>
     </nav>
     <main>
         <br> </br>
-            <h2>The Competition:</h2>
-        
-            <h4>What content does Rookie Coding feature?</h4>
-                <p>
-                    Quite a bit, actually!
-                </p>
-            <h4>Where do I find content for Rookie Coding?</h4>
-                <p>
+        <h2>The Competition:</h2>
 
-                </p>
-            <h4>Why should you care about Rookie Coding?</h4>
-                <p>
+        <h4>What's the market for coding like?</h4>
+        <p>
+            Quite a bit, actually!
+        </p>
+        <h4>What does the competition do right?</h4>
+        <p>
 
-                </p>
-            <h4>Why build a whole Rookie Coding site?</h4>
-                <p>
+        </p>
+        <h4>What does the competition do wrong?</h4>
+        <p>
 
-                </p>
-            <h4>What would I like you to do here on Rookie Coding?</h4>
-                <p>
-                    
-                </p>
-            <h4>What's the goal of Rookie Coding?</h4>
-                <p>
+        </p>
+        <h4>How does Rookie Coding do it better?</h4>
+        <p>
 
-                </p>
-                <br></br>
-                    <h6>
-                      <footer> Copyright &copy; 2025 </footer>
-                    </h6>
+        </p>
+        <br></br>
+        <h6>
+            <footer> Copyright &copy; 2025 </footer>
+        </h6>
     </main>
 </body>
 
