--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -13,42 +13,110 @@
         <h1>Rookie Coding</h1>
     </header>
     <nav>
-        <a href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/index.html">Home</a>  &nbsp;
-        <a href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/audience.html">Audience</a> &nbsp;
-        <a href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/competition.html">Competition</a>
+        <a
+            href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/index.html">Home</a>
+        &nbsp;
+        <a
+            href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/audience.html">Audience</a>
+        &nbsp;
+        <a
+            href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/competition.html">Competition</a>
     </nav>
     <main>
         <br> </br>
-            <h2>Website Summary:</h2>
+        <h2>Website Summary:</h2>
 
-    <h4>What content does Rookie Coding feature?</h4>
+        <h4>What content does Rookie Coding feature?</h4>
         <p>
-            Oh, lots of things!
+            As the name "Rookie Coding" implies, this is a space where you can sample my upcoming coding projects that I
+            create in my spare time,
+            mostly games, small exercises, and beginner-friendly challenges to start. Although I'm a beginning coder and
+            don't have much (if any)
+            experience on my belt, I see the chance to share my process with an audience and take your comments,
+            suggestions, and (constructive)
+            criticism as much-welcome practice and an opportunity to build a community where we can learn and grow in
+            our coding together.
         </p>
-    <h4>Where do I find content for Rookie Coding?</h4>
         <p>
-
+            Having said that, don't expect too many advanced projects or market-ready products from me. I'm a hobbyist
+            and a learner, not a professional
+            developer with a team or a business behind me. For the time being, expect mostly "DIY" or "homebrew" things,
+            as well as the
+            <a href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/index.html">SE-1400
+                course homepage</a> with links
+            to the usual course assignments and final-project milestones. After all, that's why this site's being built
+            in the first place.
         </p>
-    <h4>Why should you care about Rookie Coding?</h4>
+        <h4>Where do I find content for Rookie Coding, namely text and images?</h4>
         <p>
-
+            There's an ever-growing host of media on the World Wide Web already, so in theory, finding text, images, and
+            other content should be easy.
+            Unfortunately, IP laws and attribution courtesy &mdash; while <b>absolutely</b> necessary &mdash; limits my
+            choices vastly.
         </p>
-    <h4>Why build a whole Rookie Coding site?</h4>
         <p>
-
+            Per the above, I will mostly stick to my own content in the form of my upcoming coding projects. Having said
+            that, visual aids are always
+            helpful, so I may incorporate certain images, videos, and excerpts from my favorite YouTubers and online
+            creators when they demo a concept
+            or project idea particularly well (especially if their sites have a "Share" button that encourages spreading
+            their content elsewhere). That
+            said, giving due credit to the original publisher remains essential, so a clear indication will be made on
+            anything that's not originally
+            mine. Otherwise, I will be mindful of Fair Use guidelines and prohibitions on plagiarism.
         </p>
-    <h4>What would I like you to do here on Rookie Coding?</h4>
+        <h4>Why should you care about Rookie Coding?</h4>
         <p>
-
+            While I understand the appeal of more "put-together" programming sites or looking to professional coders for
+            guidance, Rookie Coding provides
+            a more ground-level, relatable take on what it's like to be a beginner programmer learning the ins and outs,
+            making mistakes, and developing
+            his process for the first time. I may not get everything right immediately, but a site that showcases what
+            I've come up with and what I still
+            need to do is a way to teach beginner programmers by meeting them where they're at &mdash; and more
+            importantly, redoubling that it's okay to
+            still be figuring things out (provided you learn from your mistakes and can meet deadlines and such). If
+            nothing else, Rookie Coding's a
+            learning opportunity for me (and hopefully, also you), and I'm excited for us to learn and grow together.
         </p>
-    <h4>What's the goal of Rookie Coding?</h4>
+        <h4>Why build a whole Rookie Coding site?</h4>
         <p>
-
+            Besides fulfilling requisites for the SE-1400 course, a website affords me both a platform for sharing my
+            coding projects and creating a
+            community for fellow beginners. Sure, I could upload my projects to an existing site or platform, but that
+            wouldn't be as "self-directed" or
+            encourage me to develop as strong a foundation as I document my learning journey and try to provide
+            something that I think is lacking in most
+            online spaces. On most sites, I'd be one user among many and might be easier to gloss over, but on my own
+            site, it's easier for people to take
+            note of what I'm up to and what I hope to share with them.
+        </p>
+        <h4>What would I like you to do here on Rookie Coding?</h4>
+        <p>
+            For starters, feel free to browse around and check out my coding projects. Again, please note that they'll
+            mostly be games, small exercises, and
+            beginner-friendly challenges to start out, so nothing professional or extraordinary to start out with. That
+            said, while I don't have a comments
+            section yet, your engagement and feedback would be valued, so don't be afraid to leave comments,
+            suggestions, and other (constructive) criticism.
+            I hope to build a bit of a coding beginners' community here, and I believe this is a good way to start.
+        </p>
+        <h4>What's the goal of Rookie Coding?</h4>
+        <p>
+            Primarily, I wanted a space where I could share my coding projects and receive others' feedback, and that
+            hasn't changed. But ultimately, I also want
+            to make programming accessible and a bit more user-friendly for beginners, and figured that a site that
+            documents the learning journey of a beginner
+            writing and trudging through the learning process for and alongside fellow beginners would make it seem more
+            <b>approachable</b>, more <b>learnable</b>,
+            and more <b>relatable</b> than a polished, put-together site or business might. The idea is to encourage
+            understanding and curiosity, not to deter or
+            intimidate newcomers right out the gate.
         </p>
         <br></br>
-            <h6>
-              <footer> Copyright &copy; 2025 </footer>
-            </h6>
+        <h6>
+            <footer> Copyright &copy; 2025 </footer>
+        </h6>
     </main>
 </body>
 
