--- a/milestone1/audience.html
+++ b/milestone1/audience.html
@@ -13,42 +13,95 @@
         <h1>Rookie Coding</h1>
     </header>
     <nav>
-        <a href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/index.html">Home</a>  &nbsp;
-        <a href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/audience.html">Audience</a> &nbsp;
-        <a href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/competition.html">Competition</a>
+        <a
+            href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/index.html">Home</a>
+        &nbsp;
+        <a
+            href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/audience.html">Audience</a>
+        &nbsp;
+        <a
+            href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/competition.html">Competition</a>
     </nav>
     <main>
         <br> </br>
-            <h2>The Target Audience:</h2>
-        
-            <h4>What content does Rookie Coding feature?</h4>
-                <p>
-                    More than you think!
-                </p>
-            <h4>Where do I find content for Rookie Coding?</h4>
-                <p>
+        <h2>The Target Audience:</h2>
 
-                </p>
-            <h4>Why should you care about Rookie Coding?</h4>
-                <p>
-
-                </p>
-            <h4>Why build a whole Rookie Coding site?</h4>
-                <p>
-
-                </p>
-            <h4>What would I like you to do here on Rookie Coding?</h4>
-                <p>
-
-                </p>
-            <h4>What's the goal of Rookie Coding?</h4>
-                <p>
-                    
-                </p>
-                <br></br>
-                    <h6>
-                      <footer> Copyright &copy; 2025 </footer>
-                    </h6>
+        <h4>Who am I making this for?</h4>
+        <p>
+            Although users from all walks of life are welcome, my main target audience are fellow college-aged students
+            and other young adults
+            who are interested in coding and programming, yet unsure where to start. To that end, I'd expect most users
+            to range from 18 to 20-something,
+            and mainly skew male on account of the usual gender balance in the software engineering and development
+            fields (though anyone of any age, sex,
+            gender, or other demographic is equally welcome).
+        </p>
+        <p>
+            Lastly, while I don't have high hopes about this site going viral or making it into the history books any
+            time soon, I'd expect my audience to
+            be widely dispersed (but mainly English-speaking, since this site is an English-language site). That said, I
+            am American and write in American
+            English, so coding projects, updates, and other content will cater towards an American audience by default.
+            Nevertheless, coding and programming know no geographic, national, or cultural boundary, so as long as users
+            possess English literacy
+            and an interest in the relevant
+            topics, feel free to stop by and hang out.
+        </p>
+        <h4>Why am I making this for you?</h4>
+        <p>
+            First off, I've been &mdash; and in fact, <b>still am</b> &mdash; in the shoes of someone who's always found
+            coding,
+            programming, and understanding how computers work to be intimidating and hard to wrap my head around, given
+            all
+            the jargon and the highly technical nature of the subject. And while I may be candid about it, I very much
+            doubt
+            I'm the only one who feels this way or has felt discouraged by the way the subject is presented, taught, and
+            talked about by those "in the know" or endowed with a natural talent for it. Combined with my budding
+            <aa href="https://www.indeed.com/career-advice/career-development/technical-writing">technical writing</a>
+                skillset, and I've decided the best way to teach both myself and make the subject a bit more
+                approachable to others
+                is to take the opportunity to write about it and post my coding projects (as amateur as they be).
+        </p>
+        <p>
+            Moreover, while there are plenty of coding boot camps and other more "polished" options, those can come
+            across as
+            intimidating, and maybe even as a deterrent to newcomers overwhelmed by all the new terminology, flashy
+            graphics,
+            and ease with which the creators and programmers &mdash; who overwhelmingly tend to be seasoned
+            professionals or
+            specialists in their line of work &mdash; toss around seamlessly and without difficulty. The rest of us,
+            meanwhile,
+            are struggling to follow and have to brute-force our way through exercises and develop a semi-makeshift way
+            of picking
+            it up ourselves. For some people, it clicks after a while. But for others, a clear path forward or how the
+            actual
+            learning process works is simply not laid out for them. With luck, I hope to help resolve that discrepancy.
+        </p>
+        <h4>What can you expect here?</h4>
+        <p>
+            As I've said before, Rookie Coding is a beginner-friendly space where I post my coding projects, so expect
+            mostly games,
+            small exercises, beginner-friendly challenges, and a few posts from me about how things are going. While I
+            don't have the
+            know-how to set up a comments section at this time, it is a venue for building community engagement and
+            receiving your
+            comments and feedback, so rest assured that I will look into that.
+        </p>
+        <p>
+            Do not, however, expect any professional or extraordinary projects or feats anytime soon. While I am a
+            beginner and a
+            hobbyist, I am no expert or career developer. I don't have a team or a business behind me, so what you see
+            here will
+            reflect the skill level of someone slowly, but surely developing their foundation and figuring things out as
+            he goes
+            along. Improvement and larger undertakings will come with time, but don't expect a quantum leap from
+            Tic-Tac-Toe to
+            my first physics engine overnight.
+        </p>
+        <br></br>
+        <h6>
+            <footer> Copyright &copy; 2025 </footer>
+        </h6>
     </main>
 </body>
 
