--- a/milestone1/competition.html
+++ b/milestone1/competition.html
@@ -28,15 +28,17 @@
 
         <h4>What's the market for coding like?</h4>
         <p>
-            Quite a bit, actually!
-        </p>
-        <h4>What does the competition do right?</h4>
-        <p>
+            Overall, the market for coding is highly diverse and offers no shortage of options, both paid and plenty of free ones too. Everything from 
+            <a href="https://www.freecodecamp.org/">FreeCodeCamp</a> to <a href="https://ocw.mit.edu/collections/introductory-programming/">MIT OpenCourseWare</a> 
+            is available for coders of all skill levels, attention spans, and walks of life (though some courses are more rigorous than others). This makes
+            it difficult to recap the industry as a whole, but it is a dynamic, innovative, and highly technical one with its own set of cues and preferences.
+            Bright and futuristic colors, more geometric page layouts, and more robotic fonts that lack stylization or curly, more antiquated characters set
+            these sites and creators apart, which jives well with the fields they specialize in and want to impart to their audience.
 
         </p>
-        <h4>What does the competition do wrong?</h4>
+        <h4>What are the competition's strengths and weaknesses?</h4>
         <p>
-
+            The mar
         </p>
         <h4>How does Rookie Coding do it better?</h4>
         <p>
