--- a/milestone1/competition.html
+++ b/milestone1/competition.html
@@ -28,21 +28,48 @@
 
         <h4>What's the market for coding like?</h4>
         <p>
-            Overall, the market for coding is highly diverse and offers no shortage of options, both paid and plenty of free ones too. Everything from 
-            <a href="https://www.freecodecamp.org/">FreeCodeCamp</a> to <a href="https://ocw.mit.edu/collections/introductory-programming/">MIT OpenCourseWare</a> 
-            is available for coders of all skill levels, attention spans, and walks of life (though some courses are more rigorous than others). This makes
-            it difficult to recap the industry as a whole, but it is a dynamic, innovative, and highly technical one with its own set of cues and preferences.
-            Bright and futuristic colors, more geometric page layouts, and more robotic fonts that lack stylization or curly, more antiquated characters set
-            these sites and creators apart, which jives well with the fields they specialize in and want to impart to their audience.
+            Overall, the market for coding is highly diverse and offers no shortage of options, both paid and plenty of
+            free ones too. Everything from
+            <a href="https://www.freecodecamp.org/">FreeCodeCamp</a> to <a
+                href="https://ocw.mit.edu/collections/introductory-programming/">MIT OpenCourseWare</a>
+            is available for coders of all skill levels, attention spans, and walks of life (though some courses are
+            more rigorous than others). This makes
+            it difficult to recap the industry as a whole, but it is a dynamic, innovative, and highly technical one
+            with its own set of cues and preferences.
+            Bright and futuristic colors, more geometric page layouts, and more robotic fonts that lack stylization or
+            curly, more antiquated characters set
+            these sites and creators apart, which jives well with the fields they specialize in and want to impart to
+            their audience.
 
         </p>
         <h4>What are the competition's strengths and weaknesses?</h4>
         <p>
-            The mar
+            The strengths and weaknesses of the competition are multivaried, but there are a few key commonalities I've
+            picked up. While they're obviously skilled
+            when creating fun exercises, including fun and flashy graphics, and making coding accessible, they don't
+            always make it approachable and often get lost
+            in their own jargon as the instructors (who tend to be seasoned professionals and specialists) begin tossing
+            around technical terms and concepts under
+            the assumption that the audience can keep up. While this makes the industry "genre-savvy", it also makes
+            them hard-pressed to meet beginners where they're
+            at and slowly, but surely walk them through how the actual learning process works in a deliberate, yet
+            learnable way (as opposed to just giving them one
+            lesson after the next and assuming they will keep up).
         </p>
         <h4>How does Rookie Coding do it better?</h4>
         <p>
-
+            Given this discrepancy, Rookie Coding attempts to address what most coding sites and options often neglect
+            by making a space for a beginner coder aspiring
+            to bring together a community of beginners, so that we can exchange feedback and insights as we learn how to
+            code from a ground-level and build up our skills
+            at our own pace. Professionals and experts are welcome, of course, but Rookie Coding goes the extra mile to
+            keep it focused on the needs of beginners and
+            amateurs who don't have all the jargon, commands, and updates down pat yet and need hands-on experiences
+            trying out what works and what doesn't for
+            themselves. In my case, it's a space to demo my own beginner coding projects, so that other beginners can
+            test them out and gain insight into what the actual
+            learning process looks like instead of relying on a pre-set, structured walkthrough that may come across as
+            too polished or technical already.
         </p>
         <br></br>
         <h6>
