Linked other pages here, too.

--- a/milestone1/competition.html
+++ b/milestone1/competition.html
@@ -14,13 +14,13 @@
     </header>
     <nav>
         <a
-            href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/index.html">Home</a>
+            href="https://zyobot101.github.io/se1400/milestone1">Home</a>
         &nbsp;
         <a
-            href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/audience.html">Audience</a>
+            href="https://zyobot101.github.io/se1400/milestone1/audience">Audience</a>
         &nbsp;
         <a
-            href="file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone1/competition.html">Competition</a>
+            href="https://zyobot101.github.io/se1400/milestone1/competition">Competition</a>
     </nav>
     <main>
         <br> </br>
