--- a/milestone1/audience.html
+++ b/milestone1/audience.html
@@ -14,7 +14,7 @@
     </header>
     <nav>
         <a
-            href="https://zyobot101.github.io/se1400/milestone1">Home</a>
+            href="https://zyobot101.github.io/se1400/milestone1/index.html">Home</a>
         &nbsp;
         <a
             href="https://zyobot101.github.io/se1400/milestone1/audience.html">Audience</a>
