--- a/utahtech3/faculty.html
+++ b/utahtech3/faculty.html
@@ -17,10 +17,9 @@
             <a href="index.html">Home</a> &nbsp;
             <a href="students.html">Students</a> &nbsp;
             <a href="faculty.html">Faculty</a> &nbsp;
-            <a href="alumni.html">Alumni</a>;
+            <a href="alumni.html">Alumni</a>
         </nav>
-        <div id="facultyhero">
-        </div>
+        <div id="facultyhero"></div>
         <main>
             <h2>Faculty at Utah Tech University</h2>
             <h3>Active Learning</h3>
