Second Students commit.

--- a/utahtech3/students.html
+++ b/utahtech3/students.html
@@ -20,7 +20,7 @@
             <a href="alumni.html">Alumni</a>
         </nav>
         <div id="studenthero">
-            <img src="studenthero.jpg" alt="Students Biking in Mountains" width="300">
+            <img alt="Students Biking in Mountains" width="300px">
         </div>
         <main>
             <h2>Why Attend Utah Tech?</h2>
