--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -17,10 +17,10 @@
             href="https://zyobot101.github.io/se1400/milestone1/">Home</a>
         &nbsp;
         <a
-            href="https://zyobot101.github.io/se1400/milestone1/audience">Audience</a>
+            href="https://zyobot101.github.io/se1400/milestone1/audience.html">Audience</a>
         &nbsp;
         <a
-            href="https://zyobot101.github.io/se1400/milestone1/competition">Competition</a>
+            href="https://zyobot101.github.io/se1400/milestone1/competition.html">Competition</a>
     </nav>
     <main>
         <br> </br>
