--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <section>
         <h2>Course Assignments</h2>
         <ul>
-            <li><a href="utahtech2/index.html">Utah Tech 2</a></li>
-            <li><a href="utahtech3/index.html">Utah Tech 3</a></li>
+            <li><a href="https://zyobot101.github.io/se1400/utahtech2/index.html">Utah Tech 2</a></li>
+            <li><a href="https://zyobot101.github.io/se1400/utahtech3/index.html">Utah Tech 3</a></li>
             <li><a href="utahtech4/index.html">Utah Tech 4</a></li>
             <li><a href="utahtech5/index.html">Utah Tech 5</a></li>
             <li><a href="utahtech6/index.html">Utah Tech 6</a></li>
