--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </ul>
         <h2>Final Project Milestones</h2>
         <ul>
-            <li><a href="milestone1/index.html">Milestone 1</a></li>
+            <li><a href="https://zyobot101.github.io/se1400/milestone1/index.html">Milestone 1</a></li>
             <li><a href="https://www.figma.com/design">Milestone 2</a></li>
             <li><a href="milestone3/index.html">Milestone 3</a></li>
             <li><a href="milestone4/index.html">Milestone 4</a></li>
