--- a/utahtech3/students.html
+++ b/utahtech3/students.html
@@ -26,8 +26,7 @@
             <h2>Why Attend Utah Tech?</h2>
             <dl>
                 <dt>Open</dt>
-                <dd>Utah Tech University is an open-access institution that offers access to open educational resources.
-                </dd>
+                <dd>Utah Tech University is an open-access institution that offers access to open educational resources.</dd>
                 <dt>Inclusive</dt>
                 <dd>UT promotes inclusivity through personalized services and diverse teaching methods.</dd>
                 <dt>Comprehensive</dt>
