--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -7,6 +7,45 @@
     <meta name="robots" content="noindex, nofollow">
     <title>Final Project Mockup</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+        <style>
+            <!-- Note: Change design features to be original! -->
+        body { 
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+
+        header {
+            background: #026c99;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        section {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background: white;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        h1,
+        h2 {
+            color: #333;
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px;
+            margin-top: 20px;
+            background: #333;
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
@@ -14,9 +53,9 @@
         <h1>Rookie Coding</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="https://zyobot101.github.io/se1400/milestone2/index.html">Home</a>
         &nbsp;
-        <a href="about.html">About</a>
+        <a href="https://zyobot101.github.io/se1400/milestone2/about.html">About</a>
         &nbsp;
         <a href="https://zyobot101.github.io/se1400/milestone2/contact.html">Contact</a>
         &nbsp;
