--- a/utahtech3/students.html
+++ b/utahtech3/students.html
@@ -19,14 +19,13 @@
             <a href="faculty.html">Faculty</a> &nbsp;
             <a href="alumni.html">Alumni</a>
         </nav>
-        <div id="studenthero">
-            <img alt="Students Biking in Mountains" width="300px">
-        </div>
+        <div id="studenthero"></div>
         <main>
             <h2>Why Attend Utah Tech?</h2>
             <dl>
                 <dt>Open</dt>
-                <dd>Utah Tech University is an open-access institution that offers access to open educational resources.</dd>
+                <dd>Utah Tech University is an open-access institution that offers access to open educational resources.
+                </dd>
                 <dt>Inclusive</dt>
                 <dd>UT promotes inclusivity through personalized services and diverse teaching methods.</dd>
                 <dt>Comprehensive</dt>
