Hopefully, last commit.

--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -53,7 +53,7 @@
         <h1>Rookie Coding</h1>
     </header>
     <nav>
-        <a href="https://zyobot101.github.io/se1400/milestone2/index.html">Home</a>
+        <a href="index.html">Home</a>
         &nbsp;
         <a href="https://zyobot101.github.io/se1400/milestone2/about.html">About</a>
         &nbsp;
