--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h2>Final Project Milestones</h2>
         <ul>
             <li><a href="https://zyobot101.github.io/se1400/milestone1/index.html">Milestone 1</a></li>
-            <li><a href="https://www.figma.com/design">Milestone 2</a></li>
+            <li><a href="https://www.figma.com/design/wkoKaBbUaBSegVsc8WaOKr/Milestone-2?t=2P8qWQIlV3TvCliV-1">Milestone 2</a></li>
             <li><a href="milestone3/index.html">Milestone 3</a></li>
             <li><a href="milestone4/index.html">Milestone 4</a></li>
             <li><a href="milestone5/index.html">Milestone 5</a></li>
