--- a/utahtech4/students.html
+++ b/utahtech4/students.html
@@ -25,9 +25,10 @@
         <main>
             <h2>Why Attend Utah Tech?</h2>
             <figure class="right">
-                <a href= "">
-                    <img src=""
-                    alt="">
+                <a href= "https://zyobot101.github.io/se1400/utahtech4/students.jpg">
+                    <img src="https://zyobot101.github.io/se1400/utahtech4/students.jpg"
+                    alt=""
+                    height = "106" width = "306">
                 </a>
             <dl>
                 <dt>Open</dt>
