--- a/utahtech4/students.html
+++ b/utahtech4/students.html
@@ -25,22 +25,23 @@
         <main>
             <h2>Why Attend Utah Tech?</h2>
             <figure class="right">
-                <a href= "https://zyobot101.github.io/se1400/utahtech4/students.jpg">
-                    <img src="https://zyobot101.github.io/se1400/utahtech4/students.jpg"
-                    alt=""
-                    width = "300">
+                <a href="https://zyobot101.github.io/se1400/utahtech4/students.jpg">
+                    <img src="https://zyobot101.github.io/se1400/utahtech4/students.jpg" alt="Students in a Lab"
+                        width="300">
                 </a>
-            <dl>
-                <dt>Open</dt>
-                <dd>Utah Tech University is an open-access institution that offers access to open educational resources.
-                </dd>
-                <dt>Inclusive</dt>
-                <dd>UT promotes inclusivity through personalized services and diverse teaching methods.</dd>
-                <dt>Comprehensive</dt>
-                <dd>Utah Tech offers programs in humanities, arts, education, health sciences, business, and STEM.</dd>
-                <dt>Polytechnic</dt>
-                <dd>All UT students gain real-world learning experiences through industry partnerships.</dd>
-            </dl>
+                <dl>
+                    <dt>Open</dt>
+                    <dd>Utah Tech University is an open-access institution that offers access to open educational
+                        resources.
+                    </dd>
+                    <dt>Inclusive</dt>
+                    <dd>UT promotes inclusivity through personalized services and diverse teaching methods.</dd>
+                    <dt>Comprehensive</dt>
+                    <dd>Utah Tech offers programs in humanities, arts, education, health sciences, business, and STEM.
+                    </dd>
+                    <dt>Polytechnic</dt>
+                    <dd>All UT students gain real-world learning experiences through industry partnerships.</dd>
+                </dl>
         </main>
         <footer>
             Copyright &copy; 2025 Utah Tech University<br>
