--- a/utahtech3/students.html
+++ b/utahtech3/students.html
@@ -22,6 +22,11 @@
         <div id="studenthero"></div>
         <main>
             <h2>Why Attend Utah Tech?</h2>
+                <a href= "https://zyobot101.github.io/se1400/utahtech3/students.jpg">
+                    <img src="https://zyobot101.github.io/se1400/utahtech3/students.jpg"
+                    alt="Students in a Lab"
+                    width = "300">
+                </a>
             <dl>
                 <dt>Open</dt>
                 <dd>Utah Tech University is an open-access institution that offers access to open educational resources.
