--- a/utahtech3/students.html
+++ b/utahtech3/students.html
@@ -22,11 +22,16 @@
         <div id="studenthero"></div>
         <main>
             <h2>Why Attend Utah Tech?</h2>
-                <a href= "https://zyobot101.github.io/se1400/utahtech3/students.jpg">
-                    <img src="https://zyobot101.github.io/se1400/utahtech3/students.jpg"
-                    alt="Students in a Lab"
-                    width = "300">
-                </a>
+                <figure>
+                    <a href= "https://zyobot101.github.io/se1400/utahtech3/students.jpg">
+                      <img src="https://zyobot101.github.io/se1400/utahtech3/students.jpg"
+                      alt="Students in Lab"
+                      width = "300">
+                    </a>
+                    </figcation>
+                    Figure 1. Students in Lab
+                    </figcaption>
+                </figure>
             <dl>
                 <dt>Open</dt>
                 <dd>Utah Tech University is an open-access institution that offers access to open educational resources.
