--- a/utahtech4/students.html
+++ b/utahtech4/students.html
@@ -29,6 +29,9 @@
                     <img src="https://zyobot101.github.io/se1400/utahtech4/students.jpg" alt="Students in a Lab"
                         width="300">
                 </a>
+                </figcation>
+                Figure 1. Students in Lab
+                </figcaption>
                 <dl>
                     <dt>Open</dt>
                     <dd>Utah Tech University is an open-access institution that offers access to open educational
