--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <ul>
             <li><a href="https://zyobot101.github.io/se1400/milestone1/index.html">Milestone 1</a></li>
             <li><a href="https://www.figma.com/design/wkoKaBbUaBSegVsc8WaOKr/Milestone-2?t=2P8qWQIlV3TvCliV-1">Milestone 2</a></li>
-            <li><a href="https://zyobot101.github.io.se1400/milestone3/index.html">Milestone 3</a></li>
+            <li><a href="https://zyobot101.github.io/se1400/milestone3/index.html">Milestone 3</a></li>
             <li><a href="milestone4/index.html">Milestone 4</a></li>
             <li><a href="milestone5/index.html">Milestone 5</a></li>
             <li><a href="milestone6/index.html">Milestone 6</a></li>
