--- a/milestone4/index.html
+++ b/milestone4/index.html
@@ -10,73 +10,75 @@
 
 <body>
     <div id="wrapper">
-        <div id = "topbar">
-            <h2><span style="color:#FE20D5;font-family:'Lexend Exa', sans-serif";><a href="index.html">ROOKIE CODING</a></span></h2>
             <nav>
+                <h2><a href="index.html">ROOKIE CODING</a></h2>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="projects.html">Project</a></li>
+                    <li><span style="color:#FF1717;"><a href="index.html">Home</a></span></li>
+                    <li><span style="color:#FFC917;"><a href="about.html">About</a></span></li>
+                    <li><span style="color:#FFFA76;"><a href="contact.html">Contact</a></span></li>
+                    <li><span style="color:#6ED22F;"><a href="blog.html">Blog</a></span></li>
+                    <li><span style="color:#746BF5;"><a href="projects.html">Project</a></span></li>
                 </ul>
             </nav>
-        </div>
-        <div id = "coding_journey">
-            <p>
+            <div id = "coding_journey">
+                <p>
                 Let's start
-            </p>
-            <p>
+                </p>
+                <p>
                 our coding
-            </p>
-            <p>
+                </p>
+                <p>
                 journey
-            </p>
-            <p>
+                </p>
+                <p>
                 together.
-            </p>
-        </div>
+                </p>
+            </div>
         <div id = "homecode">
         </div>
         <section id = "middle_bar">
             <p>
                 Bacon swine leberkas, ham hock flank beef venison pork belly...
-            <br>
+            <br></br>
                 <span>...</span>
             </p>
         </section>
         <main>
+            <a href="">
+                    <img src="" alt=""
+                        width="300">
+                </a>
             <article class = "project">
-                <h2>I'm not going anywhere.</h2>
+                <h3>I'm not going anywhere.</h3>
                     <p>
                     Skate ipsum dolor sit amet, betty boneless judo air hanger griptape.
                     Sketchy risers boned out boardslide Bill Danforth gap. Camel back
                     bigspin 360 Japan air fastplant. Wes Humpton. Aerial mute-air Gator
                     crailtap blunt deck.
                     </p>
-                    <br>
+                    <br></br>
             </article>
             <article class = "project">
-                <h2>A writer in eerie plastic.</h2>
+                <h3>A writer in eerie plastic.</h3>
                     <p>
                     Megamouth shark sand lance fathead sculpin sand dab kanyu; barramundi
                     dory ocena perch noodlefish saber-toothed blenny Black triggerfish?
                     Rainbow trout, "lamprey, longjaw mudsucker, amur pike harelip sucker."
                     </p>
-                    <br>
+                    <br></br>
             </article>
             <article class = "project">
-                <h2>Come along, Pond.</h2>
+                <h3>Come along, Pond.</h3>
                     <p>
                     Extraordinary hand-crafted Toto remarkable Helsinki Fast Lane. The
                     highest quality Ginza international bureaux K-pop Gaggenau hand-crafted
                     Winkreative Muji Lufthansa efficient.
                     </p>
-                    <br>
+                    <br></br>
             </article>
         </main>
         <footer>
-            Copyright &copy; 2025 <b>
+            Copyright &copy; 2025 <b></b>
             <a href="mailto:ethan.lee1@utahtech.edu">ethan.lee1@utahtech.edu</a>
         </footer>
     </div>
