--- a/milestone4/index.html
+++ b/milestone4/index.html
@@ -39,14 +39,15 @@
         <section id = "middle_bar">
             <p>
                 Bacon swine leberkas, ham hock flank beef venison pork belly...
-            <br></br>
-                <span>...</span>
+            </p>
+            <p>
+                <span style="color:#FFFFFF;">...</span>
             </p>
         </section>
         <main>
-            <a href="">
-                    <img src="" alt=""
-                        width="300">
+            <a href="https://zyobot101.github.io/se1400/milestone4/pexels-jorgeromeroortiz-27115293.jpg">
+                    <img src="https://zyobot101.github.io/se1400/milestone4/pexels-jorgeromeroortiz-27115293.jpg" alt="Tic-Tac-Toe Game"
+                        width="200">
                 </a>
             <article class = "project">
                 <h3>I'm not going anywhere.</h3>
@@ -58,6 +59,10 @@
                     </p>
                     <br></br>
             </article>
+            <a href="pexels-goumbik-574071.jpg">
+                    <img src="pexels-goumbik-574071.jpg" alt="Man Working on Laptop"
+                        width="200">
+            </a>
             <article class = "project">
                 <h3>A writer in eerie plastic.</h3>
                     <p>
@@ -67,6 +72,10 @@
                     </p>
                     <br></br>
             </article>
+            <a href="https://zyobot101.github.io/se1400/milestone4/pexels-picjumbo-com-55570-196650.jpg">
+                    <img src="https://zyobot101.github.io/se1400/milestone4/pexels-picjumbo-com-55570-196650.jpg" alt="Tablet and Keyboard"
+                        width="200">
+            </a>
             <article class = "project">
                 <h3>Come along, Pond.</h3>
                     <p>
