--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         <ul>
             <li><a href="https://zyobot101.github.io/se1400/utahtech2/index.html">Utah Tech 2</a></li>
             <li><a href="https://zyobot101.github.io/se1400/utahtech3/index.html">Utah Tech 3</a></li>
-            <li><a href="utahtech4/index.html">Utah Tech 4</a></li>
-            <li><a href="utahtech5/index.html">Utah Tech 5</a></li>
+            <li><a href="https;//zyobot101.github.io/se1400/utahtech4/index.html">Utah Tech 4</a></li>
+            <li><a href="https;//zyobot101.github.io/se1400/utahtech5/index.html">Utah Tech 5</a></li>
             <li><a href="utahtech6/index.html">Utah Tech 6</a></li>
             <li><a href="utahtech7/index.html">Utah Tech 7</a></li>
             <li><a href="utahtech8/index.html">Utah Tech 8</a></li>
@@ -96,7 +96,7 @@
             <li><a href="https://zyobot101.github.io/se1400/milestone1/index.html">Milestone 1</a></li>
             <li><a href="https://www.figma.com/design/wkoKaBbUaBSegVsc8WaOKr/Milestone-2?t=2P8qWQIlV3TvCliV-1">Milestone 2</a></li>
             <li><a href="https://zyobot101.github.io/se1400/milestone3/index.html">Milestone 3</a></li>
-            <li><a href="milestone4/index.html">Milestone 4</a></li>
+            <li><a href="https;//zyobot101.github.io/se1400/milestone4/index.html">Milestone 4</a></li>
             <li><a href="milestone5/index.html">Milestone 5</a></li>
             <li><a href="milestone6/index.html">Milestone 6</a></li>
             <li><a href="milestone7/index.html">Milestone 7</a></li>
