--- a/milestone4/index.html
+++ b/milestone4/index.html
@@ -13,11 +13,11 @@
             <nav>
                 <h2><a href="index.html">ROOKIE CODING</a></h2>
                 <ul>
-                    <li><span style="color:#FF1717;"><a href="index.html">Home</a></span></li>
-                    <li><span style="color:#FFC917;"><a href="about.html">About</a></span></li>
-                    <li><span style="color:#FFFA76;"><a href="contact.html">Contact</a></span></li>
-                    <li><span style="color:#6ED22F;"><a href="blog.html">Blog</a></span></li>
-                    <li><span style="color:#746BF5;"><a href="projects.html">Project</a></span></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li>><a href="blog.html">Blog</a><</li>
+                    <li><a href="projects.html">Project</a></li>
                 </ul>
             </nav>
             <div id = "coding_journey">
@@ -45,12 +45,15 @@
             </p>
         </section>
         <main>
-            <a href="https://zyobot101.github.io/se1400/milestone4/pexels-jorgeromeroortiz-27115293.jpg">
-                    <img src="https://zyobot101.github.io/se1400/milestone4/pexels-jorgeromeroortiz-27115293.jpg" alt="Tic-Tac-Toe Game"
+            <div id="main">
+                <figure class = "photo">
+                    <a href="https://zyobot101.github.io/se1400/milestone4/pexels-jorgeromeroortiz-27115293.jpg">
+                        <img src="https://zyobot101.github.io/se1400/milestone4/pexels-jorgeromeroortiz-27115293.jpg" alt="Tic-Tac-Toe Game"
                         width="200">
-                </a>
-            <article class = "project">
-                <h3>I'm not going anywhere.</h3>
+                    </a>
+                </figure>
+                <article class = "project">
+                    <h3>I'm not going anywhere.</h3>
                     <p>
                     Skate ipsum dolor sit amet, betty boneless judo air hanger griptape.
                     Sketchy risers boned out boardslide Bill Danforth gap. Camel back
@@ -58,33 +61,38 @@
                     crailtap blunt deck.
                     </p>
                     <br></br>
-            </article>
-            <a href="pexels-goumbik-574071.jpg">
-                    <img src="pexels-goumbik-574071.jpg" alt="Man Working on Laptop"
+                </article>
+                <figure class = "photo">
+                    <a href="pexels-goumbik-574071.jpg">
+                        <img src="pexels-goumbik-574071.jpg" alt="Man Working on Laptop"
                         width="200">
-            </a>
-            <article class = "project">
-                <h3>A writer in eerie plastic.</h3>
+                    </a>
+                </figure>
+                <article class = "project">
+                    <h3>A writer in eerie plastic.</h3>
                     <p>
                     Megamouth shark sand lance fathead sculpin sand dab kanyu; barramundi
                     dory ocena perch noodlefish saber-toothed blenny Black triggerfish?
                     Rainbow trout, "lamprey, longjaw mudsucker, amur pike harelip sucker."
                     </p>
                     <br></br>
-            </article>
-            <a href="https://zyobot101.github.io/se1400/milestone4/pexels-picjumbo-com-55570-196650.jpg">
-                    <img src="https://zyobot101.github.io/se1400/milestone4/pexels-picjumbo-com-55570-196650.jpg" alt="Tablet and Keyboard"
+                </article>
+                <figure class = "photo">
+                    <a href="https://zyobot101.github.io/se1400/milestone4/pexels-picjumbo-com-55570-196650.jpg">
+                        <img src="https://zyobot101.github.io/se1400/milestone4/pexels-picjumbo-com-55570-196650.jpg" alt="Tablet and Keyboard"
                         width="200">
-            </a>
-            <article class = "project">
-                <h3>Come along, Pond.</h3>
+                    </a>
+                </figure>
+                <article class = "project">
+                    <h3>Come along, Pond.</h3>
                     <p>
                     Extraordinary hand-crafted Toto remarkable Helsinki Fast Lane. The
                     highest quality Ginza international bureaux K-pop Gaggenau hand-crafted
                     Winkreative Muji Lufthansa efficient.
                     </p>
                     <br></br>
-            </article>
+                </article>
+            </div>
         </main>
         <footer>
             Copyright &copy; 2025 <b></b>
