--- a/milestone4/index.html
+++ b/milestone4/index.html
@@ -13,11 +13,11 @@
             <nav>
                 <h2><a href="index.html">ROOKIE CODING</a></h2>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li>><a href="blog.html">Blog</a><</li>
-                    <li><a href="projects.html">Project</a></li>
+                    <li><a href="index.html"><mark id="homepage">Home</mark></a></li>
+                    <li><a href="about.html"><mark id="aboutpage">About</mark></a></li>
+                    <li><a href="contact.html"><mark id="contactpage">Contact</mark></a></li>
+                    <li><a href="blog.html"><mark id="blogpage">Blog</mark></a></li>
+                    <li><a href="projects.html"><mark id="projectspage">Projects</mark></a></li>
                 </ul>
             </nav>
             <div id = "coding_journey">
@@ -46,12 +46,6 @@
         </section>
         <main>
             <div id="main">
-                <figure class = "photo">
-                    <a href="https://zyobot101.github.io/se1400/milestone4/pexels-jorgeromeroortiz-27115293.jpg">
-                        <img src="https://zyobot101.github.io/se1400/milestone4/pexels-jorgeromeroortiz-27115293.jpg" alt="Tic-Tac-Toe Game"
-                        width="200">
-                    </a>
-                </figure>
                 <article class = "project">
                     <h3>I'm not going anywhere.</h3>
                     <p>
@@ -60,11 +54,10 @@
                     bigspin 360 Japan air fastplant. Wes Humpton. Aerial mute-air Gator
                     crailtap blunt deck.
                     </p>
-                    <br></br>
                 </article>
                 <figure class = "photo">
-                    <a href="pexels-goumbik-574071.jpg">
-                        <img src="pexels-goumbik-574071.jpg" alt="Man Working on Laptop"
+                    <a href="https://zyobot101.github.io/se1400/milestone4/pexels-jorgeromeroortiz-27115293.jpg">
+                        <img src="https://zyobot101.github.io/se1400/milestone4/pexels-jorgeromeroortiz-27115293.jpg" alt="Tic-Tac-Toe Game"
                         width="200">
                     </a>
                 </figure>
@@ -75,11 +68,10 @@
                     dory ocena perch noodlefish saber-toothed blenny Black triggerfish?
                     Rainbow trout, "lamprey, longjaw mudsucker, amur pike harelip sucker."
                     </p>
-                    <br></br>
                 </article>
                 <figure class = "photo">
-                    <a href="https://zyobot101.github.io/se1400/milestone4/pexels-picjumbo-com-55570-196650.jpg">
-                        <img src="https://zyobot101.github.io/se1400/milestone4/pexels-picjumbo-com-55570-196650.jpg" alt="Tablet and Keyboard"
+                    <a href="pexels-goumbik-574071.jpg">
+                        <img src="pexels-goumbik-574071.jpg" alt="Man Working on Laptop"
                         width="200">
                     </a>
                 </figure>
@@ -90,8 +82,13 @@
                     highest quality Ginza international bureaux K-pop Gaggenau hand-crafted
                     Winkreative Muji Lufthansa efficient.
                     </p>
-                    <br></br>
                 </article>
+                <figure class = "photo">
+                    <a href="https://zyobot101.github.io/se1400/milestone4/pexels-picjumbo-com-55570-196650.jpg">
+                        <img src="https://zyobot101.github.io/se1400/milestone4/pexels-picjumbo-com-55570-196650.jpg" alt="Tablet and Keyboard"
+                        width="200">
+                    </a>
+                </figure>
             </div>
         </main>
         <footer>
