--- a/milestone4/index.html
+++ b/milestone4/index.html
@@ -41,7 +41,7 @@
                 Bacon swine leberkas, ham hock flank beef venison pork belly...
             </p>
             <p>
-                <span style="color:#FFFFFF;">...</span>
+                <mark id="ellipsis">...</mark>
             </p>
         </section>
         <main>
